# flux-cooperative-intelligence

./: CHARTER.md  DOCKSIDE-EXAM.md  PROTOCOL.md  README.md  pyproject.toml
for-fleet/: health-check-2026-04-12_171721.json
src/: __init__.py
src/coop_compiler/: __init__.py  compiler.py
src/protocol/: __init__.py  executor.py  patterns.py  problem.py
src/tests/: __init__.py  test_cooperative_intelligence.py
tests/: test_compiler.py
